Compilador completo v2.0: 5 modulos, errores EL/ES, UI mejorada
- Agrega modulos Conceptual y UML con parsers completos y AST propios
- Implementa EL03 (identificador con digito inicial) y EL04 (char invalido en identificador)
- Elimina todos los errores semanticos del sistema
- El parser siempre corre aunque haya errores lexicos (tabla de simbolos parcial)
- Registra autor, version, diagrama y tipo en la tabla de simbolos
- Numeros de linea sincronizados en el editor (HBox + TextArea companion)
- Consola arrastrable mediante SplitPane vertical
- Elimina todos los emojis de mensajes del compilador
- Sube MAX_ERRORES a 1000 para demostraciones sin truncado
- Corrige ClassCastException en pestanas de catalogo
- Corrige IndexOutOfBoundsException en validarSiguienteTipo (pos=0)
- Agrega 13 archivos de prueba (EL01-EL04, ES01-ES05, ES_flujo/bd/redes/conceptual/uml)
- Actualiza manual de usuario y documentacion tecnica completos

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>